initial commit - rough draft

--- a/index.html
+++ b/index.html
@@ -5,6 +5,57 @@
   <title>Project 1</title>
 </head>
 <body>
-  <h1>Project 1</h1>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Resume</a></li>
+				<li><a href="project.html">Project Experience</a></li>
+				<li><a href="benefits.html">Benefits Explains!</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<div>
+			<h1>Michael T. Cox</h1>
+			<p>2016 Mariah Glen Court, Charlotte, NC 28213 | 267-367-1591</p>
+			<p>MThomascC@gmail.com</p>
+			<img src="images/resumeimage.jpg" alt="This is a headshot caricature of Michael">
+		</div>
+		<div>
+			<h3>Professional Experience</h3>
+				<div>
+					<p><strong>Prudential Financial</strong></p>
+					<p><em>Manager Strategic Initatives</em></p>
+						<ul>
+							<li>Test Content</li>
+						</ul>
+					<p><em>Lead Underwriting Specialist</em></p>
+						<ul>
+							<li>Test Content</li>
+						</ul>
+				</div>
+				<div>
+					<p><strong>Cigna</strong></p>
+					<p><em>Senior Underwriting Advisor</em></p>
+						<ul>
+							<li>Test Content</li>
+						</ul>
+				</div>
+				<div>
+					<p><strong>UBS Wealth Management Americas</strong></p>
+					<p><em>Private Wealth Management Assistant</em></p>
+						<ul>
+							<li>Test Content</li>
+						</ul>
+				</div>
+				<div>
+					<p><strong>Goldman Sachs, Private Wealth Management</strong></p>
+					<p><em>Financial Analyst Intern</em></p>
+						<ul>
+							<li>Test Content</li>
+						</ul>
+				</div>
+		</div>
+	</main>
 </body>
 </html>
