--- a/benefits-comparison.html
+++ b/benefits-comparison.html
@@ -8,9 +8,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="index.html">Resume</a></li>
-				<li><a href="project.html">Project Experience</a></li>
-				<li><a href="benefits.html">Benefits Explains!</a></li>
+				<li><a href="index.html">Michael's Professional Resume</a></li>
+				<li><a href="benefits-comparison.html">HSA vs HRA vs FSA - Health Account Comparison Guide</a></li>
+				<li><a href="w4.html">W-4 Form Explained - Simple Guide to Key Sections</a></li>
 			</ul>
 		</nav>
 	</header>
