--- a/benefits-comparison.html
+++ b/benefits-comparison.html
@@ -15,7 +15,86 @@
 		</nav>
 	</header>
   <div>
-		<h1>Coming Soon!</h1>
+		<h1>HSA vs HRA vs FSA - Differences Explained</h1>
+	</div>
+	<main>
+		<section>
+			<h2>Health Savings Account</h2>
+			<p>A tax-advantaged account that lets you save and pay for qualified medical expenses if you have a high-deductible health plan.</p>
+			<h2>Flexible Spending Accounts (FSA):</h2>
+			<p>A pre-tax account funded by your employer or paycheck that pays for eligible medical, dental, and dependent care expenses, usually within the plan year.</p>
+			<h2>Health Reimbursement Arrangements (HRAs):</h2>
+			<p>An employer-funded account that reimburses employees for qualified medical expenses and, in some cases, insurance premiums.</p>
+		</section>
+		<table>
+			<thead>
+				<tr id="row1">
+					<th colspan="4">HSA vs HRA vs FSA Comparison</th>
+				</tr>
+				<tr id="row2">
+					<th class="columnname"></th>
+					<th class="columnname">HSA</th>
+					<th class="columnname">HRA</th>
+					<th class="columnname">FSA</th>
+				</tr>
+				<tr id="row3">
+					<td><strong>Account Ownership:</strong></td>
+					<td>You</td>
+					<td>Employer</td>
+					<td>Employer</td>
+				</tr>
+				<tr id="row4">
+					<td><strong>High Deductible Plan Required:</strong></td>
+					<td>Yes</td>
+					<td>No</td>
+					<td>No</td>
+				</tr>
+				<tr id="row5">
+					<td><strong>Who Contributes?</strong></td>
+					<td>Anyone</td>
+					<td>Employer Only</td>
+					<td>You and Employer</td>
+				</tr>
+				<tr id="row6">
+					<td><strong>Portable:</strong></td>
+					<td>Yes</td>
+					<td>No</td>
+					<td>No</td>
+				</tr>
+				<tr id="row7">
+					<td><strong>Investable:</strong></td>
+					<td>Yes</td>
+					<td>No</td>
+					<td>No</td>
+				</tr>
+				<tr id="row8">
+					<td><strong>Tax-Free Earnings:</strong></td>
+					<td>Yes</td>
+					<td>No</td>
+					<td>No</td>
+				</tr>
+				<tr id="row9">
+					<td><strong>Balance CarryOver:</strong></td>
+					<td>Yes</td>
+					<td>No</td>
+					<td>No</td>
+				</tr>
+				<tr id="row10">
+					<td><strong>Funds Expiration:</strong></td>
+					<td>No</td>
+					<td>Yes</td>
+					<td>Yes</td>
+				</tr>
+			</thead>
+		</table>
+	</main>
+	<div>
+		<h2>Check Out This Great Explanation On Youtube!</h2>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/mRXGYwSSFwM?si=MdHjn4-57nYreFO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	</div>
+	<div>
+		<h3>Disclaimer:</h3>
+		<p><em>This information is for general educational purposes only and should not be considered legal or tax advice. Everyone’s financial situation is different—please consult a qualified tax professional for advice specific to you.</em></p>
 	</div>
 </body>
 </html>
