html entity and format clean-up

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<section>
 			<h1>Michael T. Cox</h1>
 			<p>Charlotte, NC | 267-367-1591</p>
-			<p>MThomascC@gmail.com</p>
+			<p>MThomascC&#64;gmail.com</p>
 			<img src="images/resumeimage.jpg" alt="This is a headshot caricature of Michael">
 		</section>
 		<!-- My Professional Experience -->
@@ -65,7 +65,7 @@
 					</ul>
 			</article>
 			<article>
-				<h3>Goldman Sachs, Private Wealth Management<</h3>
+				<h3>Goldman Sachs, Private Wealth Management</h3>
 				<p><em>Financial Analyst Intern</em></p>
 					<ul>
 						<li>Identified numerous private equity MNA and IPO transactions to recognize liquidity events and strategized with advisors on how the firm’s investment vehicles and products can be of benefit, resulting in over 40 leads pursued by the team</li>
