benefits-comparison.html comments

--- a/benefits-comparison.html
+++ b/benefits-comparison.html
@@ -14,10 +14,12 @@
       </ul>
     </nav>
   </header>
+  <!-- Heading -->
   <div>
     <h1>HSA vs HRA vs FSA - Differences Explained</h1>
   </div>
   <main>
+		<!-- Quick Defintions -->
     <section>
       <h2>Health Savings Account</h2>
       <p>A tax-advantaged account that lets you save and pay for qualified medical expenses if you have a high-deductible health plan.</p>
@@ -26,6 +28,7 @@
       <h2>Health Reimbursement Arrangements (HRAs):</h2>
       <p>An employer-funded account that reimburses employees for qualified medical expenses and, in some cases, insurance premiums.</p>
     </section>
+		<!-- Table Comparison -->
     <table>
       <thead>
         <tr id="row1">
@@ -89,10 +92,12 @@
     </table>
   </main>
   <div>
+	   <!-- Helpful Youtube Video -->
     <h2>Check Out This Great Explanation On YouTube!</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/mRXGYwSSFwM?si=MdHjn4-57nYreFO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
   <div>
+		<!-- Disclaimer -->
     <h3>Disclaimer:</h3>
     <p><em>This information is for general educational purposes only and should not be considered legal or tax advice. Everyone&rsquo;s financial situation is different&mdash;please consult a qualified tax professional for advice specific to you.</em></p>
   </div>
